core/unpackaged/main/default/objects/Order/fields/Additional_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Address__c</fullName>
    <label>Additional Address</label>
    <type>TextArea</type>
</CustomField>