core/unpackaged/main/default/objects/Order/fields/Carrier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Account_Number__c</fullName>
    <label>Carrier Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>