core/unpackaged/main/default/objects/Order/fields/Integrated__c.field-meta.xml
<CustomField>
    <fullName>Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the order was sent to ERP successfully</description>
    <inlineHelpText>indicates if the order was sent to ERP successfully</inlineHelpText>
    <label>Integrated</label>
    <type>Checkbox</type>
</CustomField>