core/unpackaged/main/default/objects/Order/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>stores response message received for ERP orderCreate callout</description>
    <inlineHelpText>stores response message received for ERP orderCreate callout</inlineHelpText>
    <label>Integration Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>