core/unpackaged/main/default/objects/Order/fields/Order_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Order_Submitted_By__c</fullName>
    <formula>CreatedBy.FirstName &amp; ' ' &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Submitted By</label>
    <type>Text</type>
</CustomField>