core/unpackaged/main/default/objects/Order/fields/PPI_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PPI_Order_Number__c</fullName>
    <description>The PPI Order number that returns once an order is integrated back to PPI systems.</description>
    <formula>BLANKVALUE(LEFT(External_Id__c,6), "")</formula>
    <inlineHelpText>This is the PPI Order Number</inlineHelpText>
    <label>PPI Order Number</label>
    <type>Text</type>
</CustomField>