core/unpackaged/main/default/objects/Order/fields/Ship_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Ship_Carrier__c</fullName>
    <description>Shipping Carrier integrated from ERP</description>
    <label>Ship Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>