core/unpackaged/main/default/objects/Order/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <description>Ship Date Integrated from ERP</description>
    <label>Ship Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>