core/unpackaged/main/default/objects/Order/fields/Ship_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Ship_Tracking__c</fullName>
    <description>Shipping Tracking or PRO number integrated from ERP</description>
    <inlineHelpText>Shipping Tracking or PRO number integrated from ERP</inlineHelpText>
    <label>Ship Tracking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>