core/unpackaged/main/default/objects/Order/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>