core/unpackaged/main/default/objects/Order/fields/Third_Party_Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Billing_Company__c</fullName>
    <label>Third Party Billing Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>