core/unpackaged/main/default/objects/Order/fields/Warehouse_City__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_City__c</fullName>
    <label>Warehouse City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>