core/unpackaged/main/default/objects/Order/fields/Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name__c</fullName>
    <label>Warehouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>