core/unpackaged/main/default/objects/Order/fields/Warehouse_State__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_State__c</fullName>
    <label>Warehouse State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>